@@ -1,0 +1,6 @@
+MD5 e66f22915c8ce609cd0c8f254da11c08 cpufreqd-2.2.1.tar.bz2 287628
+RMD160 ea2e66176edad38383f57143ce39bf0567aec812 cpufreqd-2.2.1.tar.bz2 287628
+SHA256 7aa39922c2aeecbd37916e445560aab8350e645b004cac4390a2ae547be7eb0a cpufreqd-2.2.1.tar.bz2 287628
+MD5 df36711124e08b3349692a8788755d14 nvclock0.8b.tar.gz 353127
+RMD160 66cac5993dc141d00efaa95d8f5ec38ed53854f6 nvclock0.8b.tar.gz 353127
+SHA256 a1fbdb82837c33869c0ebfcb95b6e11fc53b86919e8d1d17265d1af71eb04393 nvclock0.8b.tar.gz 353127
