@@ -1,6 +1,12 @@
 # ChangeLog for sys-power/cpufreqd
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufreqd/ChangeLog,v 1.45 2006/11/30 16:14:55 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufreqd/ChangeLog,v 1.46 2006/11/30 16:42:10 peper Exp $
+
+*cpufreqd-2.2.1 (30 Nov 2006)
+
+  30 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
+  +files/cpufreqd-2.2.1-init.d, +cpufreqd-2.2.1.ebuild:
+  Version bump.
 
   30 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
   -files/cpufreqd-2.0.0-init.d, -files/cpufreqd-2.1.0-init.d,
